<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">oscomanager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="main_title">OsCo Manager</string>
    <string name="main_orders">Pedidos</string>
    <string name="main_articles">Articulos</string>
    <string name="main_configure">Configurar</string>
    <string name="main_about">Acerca de</string>
    <string name="main_exit">Salir</string>
    
    <string name="lista_pedidos">Pedidos</string>
    <string name="lista_articulos">Articulos</string>
    <string name="lista_filtrar">Filtrar ventas</string>
    <string name="lista_reload">Recargar</string>
    <string name="lista_volver">Volver</string>
    <string name="lista_compartir">Compartir</string>
    
    <string name="configurar">Configurar</string>
    
    <string name="about_title">OsCommerce Manager</string>
	<string name="about_text">\nVersión RC_0.1\nDesarrollado por Javier García\njavi@komponentes.com\nwww.komponentes.com</string>
	
	<string name="detalle_numero_pedido">Pedido número:</string>
	<string name="detalle_cliente">Cliente</string>
	<string name="detalle_direccion_envio">Dirección de envío</string>
	<string name="detalle_lista_pedidos">Detalles del pedido</string>
	
	<string name="detalle_numero_articulo">Artículo número:</string>
	<string name="detalle_lista_articulos">Detalles del artículo</string>
	<string name="detalle_imagen_articulo">Imagen del artículo</string>
	<string name="detalle_cantidad">Stock:</string>
	<string name="detalle_descripcion_articulo">Descripción</string>
	
	<string name="estados_title">Detalles del pedido</string>
	<string name="estado_1">Pendiente</string>
	<string name="estado_2">Procesando</string>
	<string name="estado_3">Enviado</string>
	<string name="estado_4">Paypal</string>
	
	<string name="share_chooser">Articulo</string>
</resources>
