<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_button"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="30dp" >

        <Button
            android:id="@+id/buttonEstado"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_orders" />
        
        <Button
            android:id="@+id/buttonArticulos"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_articles" />

        <Button
            android:id="@+id/button2"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_configure" />

        <Button
            android:id="@+id/button3"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_about" />

        <Button
            android:id="@+id/button4"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_exit" />        
        
    </LinearLayout>

    <TextView
        android:id="@+id/detallesPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botones"
        android:layout_centerHorizontal="true"
        android:text="@string/main_title"
        android:textSize="26sp" />

</RelativeLayout>
