<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content" >

        <RadioButton
            android1:id="@+id/radioButton1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/estado_1" />

        <RadioButton
            android1:id="@+id/radioButton2"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/estado_2" />

        <RadioButton
            android1:id="@+id/radioButton3"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/estado_3" />

        <RadioButton
            android1:id="@+id/radioButton4"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/estado_4" />

    </RadioGroup>

</LinearLayout>