<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_button"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchLayout"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="30dp" >
    </ListView>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="0dp" >

        <Button
            android:id="@+id/button1"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_reload" />

        <Button
            android:id="@+id/button2"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_volver" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lista_pedidos"
        android:textSize="26sp" />

</RelativeLayout>
