<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_button"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/botones"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/detallesArticulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lista_articulos"
            android:textSize="26sp" />

        <RelativeLayout
            android:id="@+id/busqueda"
            android:layout_width="match_parent"
            android:layout_height="35dp" >

            <EditText
                android:id="@+id/textoBusqueda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_busqueda"
                android:ems="10"
                android:hint="@string/lista_filtrar"
                android:paddingLeft="10dp" >

            </EditText>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/lista_filtrar"
                android:src="@android:drawable/ic_menu_search" />

        </RelativeLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" >
        </ListView>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="0dp" >

        <Button
            android:id="@+id/buttonEstado"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_reload" />

        <Button
            android:id="@+id/button2"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_volver" />
    </LinearLayout>

</RelativeLayout>
