<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/detalle_numero_articulo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/numeroArticulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detallesLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/detallesArticulo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#2E9AFE"
            android:gravity="center"
            android:lines="2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textStyle="bold" />

    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/botonesDetalles"
        android:layout_below="@+id/detallesLayout" />

    <LinearLayout
        android:id="@+id/botonesDetalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:padding="0dp" >

        <Button
            android:id="@+id/buttonVolver"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_volver" />
        
        <Button
            android:id="@+id/buttonCompartir"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_compartir" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_cantidad"
            android:textColor="#FF0000FF" />

        <TextView
            android:id="@+id/stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#FF0000FF" />
    </LinearLayout>

</RelativeLayout>